%% Pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, there are some additional system Rd macros available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'biostatUZH'}


\section{Changes in biostatUZH version 1.7.0 (2016-11-18)}{
  \itemize{
    \item The function \code{confIntAUC()} has been replaced by a new
    version (with a different result) using the new function
    \code{standardErrorAUC()}. The old implementation of
    \code{confIntAUC()} is available as \code{summaryROC()}.
    \item Several CI's for operating characteristics of diagnostic tests
    have been implemented: \code{confIntDiagnostic()},
    \code{confIntIndependentDiagnostic()},
    \code{confIntPairedDiagnostic()}.
    Furthermore, \code{confIntRiskRatio()} has been added.
    \item The new function \code{behrensTest()} computes Behrens'
    version of the t-test for unequal variances.
    \item \code{formatPval()} now supports missing values.
  }
}

\section{Changes in biostatUZH version 1.6.0 (2016-02-24)}{
  \itemize{
    \item New function \code{jeffreys()} supersedes \code{jeffrey()}
    and returns the posterior median as the point estimate instead of
    \eqn{x/n}. Furthermore, the CI limits for the special cases
    \eqn{x=0} and \eqn{x=n} are no longer forced to 0 and 1,
    respectively.
    \item \code{wald()} now truncates confidence limits at 0 and 1.
    \item Functions \code{confIntProportion()}, \code{wald()},
    \code{wilson()}, \code{agresti()}, and \code{clopperPearson()} now
    check their input arguments.
    \item In \code{confIntProportion()$CIs$type}, the name
    \code{"clopperPearson"} has been changed to \code{"ClopperPearson"}.
    \item New alias \code{expit()} for \code{ilogit()}.
  }
}

\section{Changes in biostatUZH version 1.5.3 (2015-10-16)}{
  \itemize{