@@ -12,6 +12,8 @@ Authors@R: c(person(c("Sarah", "R."), "Haile", role = "aut",
                     email = "sina.rueger@isb-sib.ch"),
              person("Kaspar", "Rufibach", role = "aut",
                     email = "kaspar.rufibach@gmail.com"),
+             person("Simon", "Schwab", role = "aut",
+                    email = "simon.schwab@uzh.ch"),
              person("Daniel", "Sabanes Bove", role = "ctb"),
              person("R Core Team", role = "cph"))
 Description: Various functions developed at the Department of Biostatistics,
@@ -37,7 +39,7 @@ Description: Various functions developed at the Department of Biostatistics,
              a plot to check the adequacy of the Weibull model.
 License: GPL (>=2)
 URL: http://www.biostat.uzh.ch, http://ebuzh.r-forge.r-project.org
-Depends: R (>= 2.15.0), grDevices, graphics, stats, survival (>= 2.35)
+Depends: R (>= 2.15.0), grDevices, graphics, stats, survival (>= 2.35), carData
 Imports: boot
 Suggests: cmprsk, lme4, prodlim, psy, xtable, reporttools, Hmisc, surveillance
 Enhances: MASS, ellipse
