@@ -56,6 +56,7 @@ export(
     survrep,
     summaryROC,
     tableRegression,
+    tableOR,
     wald,
     WeibullDiag,
     WeibullReg,
